// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/travis/package getPackageUpdates detects pinning 1`] = `
Array [
  Object {
    "isRange": true,
    "newMajor": 12,
    "newValue": Array [
      "10.0.1",
      "12.3.0",
    ],
    "sourceUrl": "https://github.com/nodejs/node",
  },
]
`;

exports[`lib/manager/travis/package getPackageUpdates returns result if needing updates 1`] = `
Array [
  Object {
    "isRange": true,
    "newMajor": 12,
    "newValue": Array [
      "10",
      "12",
    ],
    "sourceUrl": "https://github.com/nodejs/node",
  },
]
`;
